fixed demos, correct port, dataset id is variable, with results

--- a/demo/finance_demo/demo.ipynb
+++ b/demo/finance_demo/demo.ipynb
@@ -26,7 +26,7 @@
     "import requests\n",
     "import math\n",
     "\n",
-    "BASE                     = \"http://localhost:8000/v2\"\n",
+    "BASE                     = \"http://localhost:8080/v2\"\n",
     "URL_LOGIN                = BASE + \"/login\"\n",
     "URL_DATASETS             = BASE + \"/datasets\"\n",
     "URL_USERS                = f\"{BASE}/users\"\n",
@@ -65,7 +65,7 @@
    "source": [
     "# user creation\n",
     "\n",
-    "root_token = requests.post(url=URL_LOGIN, json={\"username\":\"root\", \"password\":\"123\"}).json()[\"token\"]\n",
+    "root_token = requests.post(url=URL_LOGIN, json={\"username\":\"root\", \"password\":\"123\"}).json()[\"jwt\"]\n",
     "\n",
     "auth = lambda token: {\"Authorization\" : \"Bearer \" + token}\n",
     "\n",
