--- a/demo/presentation_demo.ipynb
+++ b/demo/presentation_demo.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from requests import request\n",
     "from pprint import pprint\n",
     "\n",
-    "SERVER_API_ROOT = \"http://localhost:8000/v2\"\n",
+    "SERVER_API_ROOT = \"http://localhost:8080/v2\"\n",
     "ROOT_USER = {\"username\": \"root\", \"password\": \"123\"}\n",
     "\n",
     "TUM_EVAL = \"?engine=tumult\"\n",
@@ -41,7 +41,7 @@
     "\n",
     "response = make_request(endpoint=\"/login\", method=\"POST\", body=ROOT_USER).json()\n",
     "\n",
-    "TOKEN = response['token']"
+    "TOKEN = response['jwt']"
    ]
   },
   {
@@ -53,9 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 5}\n"
+     ]
+    }
+   ],
    "source": [
     "create_dataset_body = {\n",
     "    \"name\": \"salaries\",\n",
@@ -72,6 +80,7 @@
     "\n",
     "\n",
     "response = make_request(endpoint=\"/datasets\", method=\"POST\", token=TOKEN, body=create_dataset_body)\n",
+    "DATASET_ID = response.json()[\"id\"]\n",
     "pprint(response.json())"
    ]
   },
@@ -84,14 +93,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [204]>\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"demo_data.csv\") as csv:\n",
     "    data = csv.read()\n",
     "\n",
-    "response = make_request(endpoint=\"/datasets/1/upload\", method=\"POST\", token=TOKEN, content_type=\"text/csv\", body=data.encode())\n",
+    "response = make_request(endpoint=f\"/datasets/{DATASET_ID}/upload\", method=\"POST\", token=TOKEN, content_type=\"text/csv\", body=data.encode())\n",
     "pprint(response)"
    ]
   },
@@ -104,13 +121,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [201]>\n"
+     ]
+    }
+   ],
    "source": [
     "allocate_budget_body = {\"epsilon\":1}\n",
     "\n",
-    "response = make_request(endpoint=\"/budgets/allocations/root/1\", method=\"POST\", token=TOKEN, body=allocate_budget_body)\n",
+    "response = make_request(endpoint=f\"/budgets/allocations/root/{DATASET_ID}\", method=\"POST\", token=TOKEN, body=allocate_budget_body)\n",
     "pprint(response)"
    ]
   },
@@ -123,15 +148,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'googledp': {'status': 'query is valid in GoogleDP', 'valid': True},\n",
+      " 'opendp': {'status': 'query is valid in OpenDP', 'valid': True},\n",
+      " 'tumult': {'status': 'query is valid in tumult', 'valid': True}}\n"
+     ]
+    }
+   ],
    "source": [
     "VALIDATE_COUNT_BODY = {\n",
     "    \"budget\": {\n",
     "        \"epsilon\": 0.2\n",
     "    },\n",
-    "    \"dataset\": 1,\n",
+    "    \"dataset\": DATASET_ID,\n",
     "    \"query\": [\n",
     "        {\n",
     "            \"count\": {\n",
@@ -155,9 +190,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count no DP: 1000\n",
+      "Count Opendp result:\n",
+      "{'rows': [{'age': 997}]}\n",
+      "Count GoogleDp result\n",
+      "{'rows': [{'age_count': 1010}]}\n",
+      "Count Tumult result\n",
+      "{'rows': [{'count': 999}]}\n"
+     ]
+    }
+   ],
    "source": [
     "# count no dp\n",
     "\n",
@@ -176,7 +225,7 @@
     "    \"budget\": {\n",
     "        \"epsilon\": 0.2\n",
     "    },\n",
-    "    \"dataset\": 1,\n",
+    "    \"dataset\": DATASET_ID,\n",
     "    \"query\": [\n",
     "        {\n",
     "            \"count\": {\n",
@@ -196,7 +245,7 @@
     "    \"budget\": {\n",
     "        \"epsilon\": 0.2\n",
     "    },\n",
-    "    \"dataset\": 1,\n",
+    "    \"dataset\": DATASET_ID,\n",
     "    \"query\": [\n",
     "        {\n",
     "            \"count\": {\n",
@@ -216,7 +265,7 @@
     "    \"budget\": {\n",
     "        \"epsilon\": 0.2\n",
     "    },\n",
-    "    \"dataset\": 1,\n",
+    "    \"dataset\": DATASET_ID,\n",
     "    \"query\": [\n",
     "        {\n",
     "            \"count\": {\n",
@@ -240,15 +289,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GoogleDP Min Query\n",
+      "{'detail': 'something bad happened: \"unknown query step type: min\"\\n',\n",
+      " 'status': 500,\n",
+      " 'title': 'Unexpected error',\n",
+      " 'type': 'Unexpected error'}\n"
+     ]
+    }
+   ],
    "source": [
     "MIN_BODY = {\n",
     "    \"budget\": {\n",
     "        \"epsilon\": 0.2\n",
     "    },\n",
-    "    \"dataset\": 1,\n",
+    "    \"dataset\": DATASET_ID,\n",
     "    \"query\": [\n",
     "        {\n",
     "            \"min\": {\n",
@@ -272,9 +333,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'googledp': {'status': 'unknown query step type: min', 'valid': False},\n",
+      " 'opendp': {'status': 'the min measurement is not supported', 'valid': False},\n",
+      " 'tumult': {'status': 'query is valid in tumult', 'valid': True}}\n"
+     ]
+    }
+   ],
    "source": [
     "min_validate_resp = make_request(endpoint=f'/queries/validate', method=\"POST\", token=TOKEN, body=MIN_BODY)\n",
     "pprint(min_validate_resp.json())"
@@ -289,9 +360,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tumult Min Result\n",
+      "{'rows': [{'age_min': 22.40286332616448}]}\n"
+     ]
+    }
+   ],
    "source": [
     "tminb_resp = make_request(endpoint=f'/queries/evaluate{TUM_EVAL}', method=\"POST\", token=TOKEN, body=MIN_BODY)\n",
     "print(\"Tumult Min Result\")\n",
@@ -308,15 +388,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'detail': 'bad request: not have budget for making the query',\n",
+      " 'status': 400,\n",
+      " 'title': 'Bad Request',\n",
+      " 'type': 'Bad Request'}\n"
+     ]
+    }
+   ],
    "source": [
     "NOT_ENOUGH_EPS_EVAL = {\n",
     "    \"budget\": {\n",
     "        \"epsilon\": 0.5\n",
     "    },\n",
-    "    \"dataset\": 1,\n",
+    "    \"dataset\": DATASET_ID,\n",
     "    \"query\": [\n",
     "        {\n",
     "            \"filter\": [\"age > 20\", \"age < 60\"]\n",
@@ -348,9 +439,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'allocated': {'delta': 0, 'epsilon': 1},\n",
+      "  'consumed': {'delta': 0, 'epsilon': 0.8},\n",
+      "  'dataset': 5}]\n"
+     ]
+    }
+   ],
    "source": [
     "budget_check_resp = make_request(endpoint=f'/budgets/users/root', method=\"GET\", token=TOKEN)\n",
     "pprint(budget_check_resp.json())"
@@ -366,15 +467,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rows': [{'age_binned': 30, 'count': 193},\n",
+      "          {'age_binned': 40, 'count': 250},\n",
+      "          {'age_binned': 50, 'count': 230},\n",
+      "          {'age_binned': 60, 'count': 201}]}\n"
+     ]
+    }
+   ],
    "source": [
     "ENOUGH_EPS_EVAL = {\n",
     "    \"budget\": {\n",
     "        \"epsilon\": 0.2\n",
     "    },\n",
-    "    \"dataset\": 1,\n",
+    "    \"dataset\": DATASET_ID,\n",
     "    \"query\": [\n",
     "        {\n",
     "            \"filter\": [\"age > 20\", \"age < 60\"]\n",
@@ -406,13 +518,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'allocated': {'delta': 0, 'epsilon': 1},\n",
+      "  'consumed': {'delta': 0, 'epsilon': 1},\n",
+      "  'dataset': 5}]\n"
+     ]
+    }
+   ],
    "source": [
     "budget_check_resp = make_request(endpoint=f'/budgets/users/root', method=\"GET\", token=TOKEN)\n",
     "pprint(budget_check_resp.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
